# tsf-sync

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
bench/: fiwitsf.nix
benches/: hot_path.rs
docs/: architecture.md  comparison.md  debugfs-tool.md  deployment.md  driver-patches.md  driver-survey.md  edca-interference-lab-plan.md  error-handling.md  kernel-module.md  mt7925-rate-selection.md  mt7925-tsf-findings.md  multi-host.md  nix.md  options-considered.md  ptp-topology.md  rust-mt76-ptp.md  status.md  testing.md  upstream.md  userspace-tool.md  wifi-timing.md
kernel/: Makefile  dkms.conf  tsf_ptp.c  tsf_ptp.h  tsf_ptp_uapi.h
kernel/tests/: test_hwsim.sh  validate_hwsim_tsf.sh
nix/: ci.nix  cross.nix  devshell.nix  kernel-module.nix  module.nix  mt7925-tsf-test.nix  package.nix  scripts.nix  wifi-ptp-test.nix
nix/overlays/: cross-cache.nix  cross-fixes.nix  cross-vm.nix
patches/: default.nix  kernel-source.nix  lib.nix
patches/ath10k/: 0001-wifi-ath10k-add-ptp-hardware-clock-for-tsf.patch
patches/ath11k/: 0001-wifi-ath11k-add-ptp-hardware-clock-for-tsf.patch
patches/ath9k/: 0001-wifi-ath9k-add-ptp-hardware-clock-for-tsf.patch
patches/mt76/: 0001-wifi-mt76-add-ptp-hardware-clock-for-tsf.patch  0002-wifi-mt76-add-kunit-tests-for-ptp-clock.patch  0003-selftests-net-add-wifi-ptp-clock-tests.patch
patches/test/: default.nix
scripts/: check-asm.sh
src/: config_gen.rs  daemon.rs  discovery.rs  health.rs  iouring_sync.rs  lib.rs  main.rs  module_loader.rs  ptp4l.rs  sync_mode.rs
tests/: config_gen_test.rs  discovery_test.rs
(+22 files in other folders)
