[package]
name = "tsf-sync"
version = "0.1.0"
edition = "2024"
description = "Bridge WiFi TSF into the Linux PTP subsystem"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
nix = { version = "0.29", features = ["time", "fs", "process", "signal"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"
io-uring = { version = "0.7", optional = true }

[features]
default = []
iouring = ["io-uring"]

[dev-dependencies]
tempfile = "3"

[[test]]
name = "hwsim_test"
path = "tests/integration/hwsim_test.rs"
